--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,7 +7,7 @@
       "bump-patch-for-minor-pre-major": true,
       "draft": false,
       "include-v-in-tag": false,
-      "prerelease": true
+      "prerelease": false
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
